# todo-app-practice-1

./: .gitignore  README.md  biome.json  package-lock.json  package.json  startup-dev-server.sh
.devcontainer/: devcontainer.json  docker-compose.yml  postCreateCommand.sh  setupDb.sh
.github/workflows/: deploy.yml  publish-doc.yml  unit-test.yml
auth/: index.template.js  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/src/: database.py  main.py  tmp.py
backend/src/core/: auth.py  config.py  database.py
backend/src/todo/: exceptions.py  models.py  repositories.py  routers.py  schemas.py
backend/tests/: database.py  test_todos.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/features/todo/api/: index.ts
frontend/src/features/todo/components/pages/: ToDoPage.tsx
frontend/src/features/todo/components/parts/: BaseFormModal.tsx  CreateFormModal.tsx  CreateModal.tsx  DeleteModal.tsx  EditFormModal.tsx  EditModal.tsx  SearchBox.tsx  ToDoBoard.tsx  ToDoCard.tsx  ToDoLane.tsx
frontend/src/features/todo/constants/: index.ts
frontend/src/features/todo/types/: index.ts
infrastructure/: README.md  cdk.json  deploy.sh  package-lock.json  package.json
infrastructure/lib/: cognito-stack.ts  todo-app-stack.ts
infrastructure/lib/constructs/: auth-cognito.ts  auth-lambda.ts  backend-api.ts  db-table.ts  frontend-cdn.ts
infrastructure/lib/constructures/: frontend-cdn.ts
infrastructure/lib/stacks/: cognito-stack.ts  todo-app-stack.ts
infrastructure/utils/: hash.ts
