[tool.poetry]
name = "todo-app-practice-1-backend"
description = ""
authors = ["Mao Matsumoto"]
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "1.34.44"
fastapi = "0.109.2"
pydantic = {extras = ["dotenv"], version = "2.6.1"}
pydantic-settings = "2.2.0"
python = "^3.12"
uvicorn = {extras = ["standard"], version = "0.27.1"}

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
mypy-boto3-dynamodb = "1.34.46"
poethepoet = "0.24.4"
ruff = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.poe.tasks]
fmt = "black src tests --check"
lint = "ruff check src tests"
dev = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
